@@ -1,10 +1,12 @@
 Tethys (Beta)
 =============
 
-Version: 0.7
+Version: 0.8
 
 Database: demo001.sql + changes
 
 TODO:
 * Generic Edit, Insert
 * Messages
+* Widgets
+* Login
