@@ -9,10 +9,36 @@ class module{
 	}
 	
 	function get_menu($page_id){
-		if (USER_ADMIN) echo("Nicht implementiert: Funktion \"".__FUNCTION__."\" in Modul \"".$this->modul_name."\"!");
+		#if (USER_ADMIN) echo("Nicht implementiert: Funktion \"".__FUNCTION__."\" in Modul \"".$this->modul_name."\"!");
 		return null;
 	}
 	
+	function get_features(){
+		#if (USER_ADMIN) echo("Nicht implementiert: Funktion \"".__FUNCTION__."\" in Modul \"".$this->modul_name."\"!");
+		return null;
+	}
+	
+	function set_feature($feature,$value){
+		#if (USER_ADMIN) echo("Nicht implementiert: Funktion \"".__FUNCTION__."\" in Modul \"".$this->modul_name."\"!");
+		return false;
+	}
+	
+}
+
+function get_feature($modul_id,$feature_id){
+	global $modules;
+	$modul=$modules[$modul_id];
+	$features=$modul->get_features();
+	return $features[$feature_id]->value;
+}
+
+class feature{
+	var $value;
+	var $description;
+	function __construct($value,$description){
+		$this->value=$value;
+		$this->description=$description;
+	}
 }
 
 function module_read(){
