@@ -1,0 +1,10 @@
+
+CREATE TABLE IF NOT EXISTS `demo_features` (
+  `ID` varchar(20) COLLATE utf8_bin NOT NULL,
+  `value` text COLLATE utf8_bin NOT NULL,
+  PRIMARY KEY (`ID`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_bin;
+
+INSERT INTO `demo_features` (`ID`, `value`) VALUES ('FEATURE1', '1');
+
+# db_blanko.sql =====================================================================================
